# aria-mgmt

./: .cursorindexingignore  .env.example  .gitignore  ABSENCES.md  ARCHITECTURE.md  ARIA.md  Makefile  README.md  VISION_ARIA.md  VISION_CONSTRUCTOR.md  VISION_UCS.md  _ARCHITECTURE.md  _DOCS_INDEX.md  _VISION_UCS.md  deploy.sh  general-purpose-capability-appendix (1).md  kill.sh  models.yaml  pyproject.toml  requirements.txt  run.sh  voice-plan-build-unified-plan (1).md  wiring.md
configs/: structural_absences.json
cursor_wrapper/: index.js  package-lock.json  package.json
discord_voice_bridge/: dave_passthrough_patch.js  echo_suppressor.js  index.js  package-lock.json  package.json  recorder.js  test_echo_suppressor.js  test_playback.js
docs/: ARIA_ARTIFACT_DELIVERY_FORENSIC_AND_PLAN.md  README.md  local-spark-agent.md  modelvault.md  natural-state.md  product-correctness-approach.md  universal_constructor.html
evals/: calibration_corpus.json  fulfillment_corpus.json
hooks/: README.md  cursor-event.py  install.py  notify-finish.py
loops/: bug-investigation.yaml  feature-build.yaml  hands-build.yaml  home-control.yaml  home-status.yaml  local-ask.yaml  refactor.yaml  research-brief.yaml
ops/: aria  bootstrap.sh  build_macos_swift.sh  com.you.aria-notify-heartbeat.plist  com.you.voicebot-backup.plist  com.you.voicebot.plist  cursor_ide_debug.sh  google_oauth_bootstrap.py  grant_permissions.sh  install.sh  launch.sh  modelvault_provision.sh
projects/: registry.md
prompts/: _principles.md  architecture.md  audit_packaging.md  audit_visual.md  bug-analysis.md  cc_chat_review.md  cc_implement.md  cc_merge_upstream.md  cc_plan.md  cc_verify.md  conductor.md  distill_thread.md  do_with_claude_system.md  gemini_system.md  implementation.md  planning.md  refactor.md
scripts/: aria_cc_loop_demo.py  e2e_42c_invite.py  e2e_42c_invite_last_report.json  e2e_aria_golden.py  e2e_aria_golden_last_report.json  e2e_aria_narrates.py  e2e_live_user.py  e2e_remote_pilot.py  gate.sh  gmail_oauth.py  ha_onboard.py  lint_principles_include.sh  live_meter.py  local_chat_gate.py  probe_live_model.py  provision_imessage.py  publish_home.py  pull_discord_72h.py  spark_acceptance.py  spark_cc.py  spark_cluster.py  spark_serve.py  verify_mail_access.py  voice_audibility_test.py
src/: __init__.py  audit_dedup_probe.py  audit_idempotency_lint.py  bot.py  brain.py  build_hash.py  capability.py  claude_code.py  conductor.py  config.py  conversation.py  cursor_bridge.py  cursor_external.py  cursor_ide_driver.py  cursor_registry.py  cursor_tools.py  db.py  discord_voice.py  dispatcher.py  doctor.py  engine_claude_code.py  eval.py  floor.py  frontends.py  fulfillment.py  gemini_session.py  home_verify.py  homeassistant.py  judge.py  judge_calibration.py  local_audio.py  local_chat_web.py  local_voice.py  loops.py  mcp.py  memory.py  notify_phone.py  outcome_log.py  outcomes.py  playbook.py  (+16 more)
tests/: conftest.py  deep_integration.py  smoke.py  test_antecedent_bind.py  test_attention_dedup.py  test_attention_gate.py  test_boundary_contracts.py  test_brain.py  test_capability.py  test_claimed_delivery_anchor.py  test_conversation.py  test_conversation_log.py  test_cursor_finish_notify.py  test_cursor_lifecycle_watcher.py  test_cursor_live_status.py  test_cursor_question_detect.py  test_dedup_and_dispatch.py  test_deliver_awareness.py  test_dispatch_contract.py  test_doctor.py  test_durable_judge.py  test_floor.py  test_fulfillment.py  test_ground_primitive.py  test_hands_endpoint.py  test_home.py  test_judge_calibration.py  test_judge_harness.py  test_judge_posture_loud.py  test_live_meter.py  test_local_spark_agent.py  test_long_transfer_routing.py  test_modelvault.py  test_notify_dm_blocked.py  test_notify_finish_hook.py  test_notify_phone.py  test_outcome_classifier.py  test_playbook.py  (+13 more)
(+72 files in other folders)
