[project]
name = "ucs"
version = "0.1.0"
description = "Voice -> Plan -> Build: Discord voice to Gemini Live to Claude Opus to Cursor"
requires-python = ">=3.11,<3.14"
dependencies = [
    # Discord voice receive needs py-cord (NOT discord.py — they share the
    # `discord` namespace but only py-cord exposes discord.sinks.Sink).
    "py-cord[voice]>=2.7.0",
    # Gemini Live API. Note: client.aio.live.connect() is an async context
    # manager, not an awaitable — the bridge code must use `async with`.
    "google-genai>=2.0.0",
    "anthropic>=0.42.0",
    "mem0ai>=2.0.0",
    "python-dotenv>=1.0.0",
    # numpy must be <2: the transformers/torch chain has C-extensions
    # compiled against 1.x ABI; numpy>=2 will crash at import time.
    "numpy<2",
    "mcp>=1.0.0",
    # chromadb is a transitive of mem0ai; keep it pinned here to fail loud
    # if mem0 drops it.
    "chromadb>=0.4.0",
    "pyyaml>=6.0",
    "aiohttp>=3.9.0",
    "sounddevice>=0.4.0",
    "openwakeword>=0.6.0",
    # macOS window capture by CoreGraphics window-id (screencapture -l), used by
    # the DGX Spark acceptance harness so a fullscreen app can't occlude the
    # grab. Optional at runtime (the harness falls back to a region grab) but
    # declared so a clean install captures robustly.
    "pyobjc-framework-Quartz>=10.0",
    # modelvault (cold-backup CLI): HF metadata + small-file fetch, the offline
    # completeness verifier, the CLI, range-read HTTP, and retry/backoff. rclone
    # is the one external binary (installed separately) and owns the byte path.
    "huggingface_hub>=0.34",
    "transformers>=4.57,<6",
    "safetensors>=0.4",
    "accelerate>=0.30",
    "typer>=0.12",
    "requests>=2.32",
    "tenacity>=8.0",
]

[project.scripts]
ucs = "src.bot:main"
modelvault = "src.modelvault.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]
