[project]
name = "aria"
version = "2.0.0"
description = "Aria v2 — a small voice-first assistant: Claude conducts, one engine (Claude Code) works."
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.111",
    "claude-agent-sdk>=0.2.106",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
voice = ["livekit-agents~=1.6", "livekit-plugins-silero>=1.0"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
